# zinolib

./: pyproject.toml
examples/: pm-add.py  pm-test.py  pm-test2.py  reboot.py  schedule_reboot_host.py
src/zinolib/: ritz.py
src/zinolib/config/: settings.py  tcl.py  utils.py
